# git-ai-cli

./: Cargo.toml  README.md
src/: cli.rs  commit_reference.rs  config.rs  error.rs  git.rs  main.rs  prompt_template.rs  util.rs
src/command/: configure.rs  explain.rs  generate.rs  mod.rs
src/git_entity/: commit.rs  diff.rs  mod.rs
src/llm/: anthropic.rs  grok.rs  mod.rs  openai.rs  phind.rs
