[package]
name = "gitai"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "GitAI is a command-line tool powered by AI that makes your Git workflow smoother and easier. It helps you create commit messages, understand changes, and manage your repository—all without needing an API key."
repository = "https://github.com/YaSh8202/git-ai-cli"
readme = "README.md"
keywords = ["git", "ai", "cli", "command-line", "tool"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
clap = {version = "4.5.27", features = ["derive","env"]}
dialoguer = "0.11.0"
dirs = "5.0.1"
indoc = "2.0.6"
reqwest = {version = "0.12.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
spinoff = "0.8.0"
termimad = "0.31.2"
thiserror = "2.0.11"
tokio = {version = "1.43.0", features = ["full"]}
